<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Wifi iData</string>
    <string name="action_settings">Settings</string>
      <string name="encrypt">加密</string>
    <string name="confirm_password">请输入加密的密码</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="input_password">请输入密码</string>
    
     <string name="load">正在加载文件列表</string>
    <string name="tab_local">本地存储区</string>
    <string name="tab_idata">iData存储区</string>
    <string name="setting">设置</string>
    <string name="mutil_choose">多选</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="music">音乐</string>
     <string name="doc">文档</string>
    <string name="folder">文件夹</string>
    <string name="contact">通讯录备份与导入</string>
     <string name="internal_store">内部存储器</string>
     <string name="sdcard">外置SD卡</string>
     <string name="not_connect_idata">尚未连接iData设备，请重新连接后重试！</string>
      <string name="quit">退出</string>
    <string name="sure_quit">确定退出应用？</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="copy">复制</string>
     <string name="move">移动</string>
     <string name="delete">删除</string>
     <string name="open_file_tip">手机尚未安装打开此种类型的软件，请自行下载安装</string>
     <string name="lanuage">语言设置</string>
     <string name="route">路由设置</string>
      <string name="about">关于本机</string>
       <string name="cn">简体中文</string>
        <string name="tw">繁体中文</string>
         <string name="en">英文</string>
         <string name="copy_to_here">复制到此处</string>
           <string name="copying">正在复制文件</string>
            <string name="delete_confirm">确定要删除此文件吗？</string>
             <string name="moving">正在移动文件</string>
              <string name="move_to_here">移动到此处</string>
                 <string name="delete_files">正在删除文件</string>
 		<string name="no_move_tip">当前分类不能移动文件，请到文件夹分类里面使用此功能</string>
 		<string name="product_model">产品型号</string>
 		<string name="product_name">产品名称</string>
        <string name="manufacturers">制造商</string>  
        <string name="about_idata">关于本机</string>   
        
           <string name="backup_contacts">备份通讯录</string>   
           <string name="backup_to_idata">将联系人从手机备份到iData</string>
           <string name="restore_contacts">导入通讯录</string> 
            <string name="restore_to_idata">将联系人从iData导入到手机</string> 
            <string name="local_contacts">本地联系人：</string> 
            
           <string name="backuping">正在备份联系人...</string> 
           <string name="restoring">正在导入联系人...</string> 
           <string name="people">人</string> 
            <string name="last_time">上一次操作：</string> 
            <string name="backup_success">联系人备份完成</string>
            <string name="restore_success">联系人导入完成</string>
            
            <string name="downloading">正在下载中</string>
</resources>