<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/store_bg"
    >
    
      <LinearLayout 
        android:id="@+id/top"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/top_bg"
	    android:gravity="center"
	    >
    	<ImageView 
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		  android:background="@drawable/logo"/>
     </LinearLayout>
     
      <LinearLayout 
        android:id="@+id/lanuage"
        android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:gravity="center_vertical"
	    >
	    <TextView 
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:layout_marginLeft="20dp"
	   		 android:textColor="@color/category_color"
	   		 android:text="@string/lanuage"/>
     </LinearLayout>
     
      <ImageView 
           android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:background="@drawable/index_divider"/>
	    
     <LinearLayout 
        android:id="@+id/route"
        android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:gravity="center_vertical"
	    >
	    <TextView 
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:textColor="@color/category_color"
	   		 android:layout_marginLeft="20dp"
	   		 android:text="@string/route"/>
     </LinearLayout>
     
      <ImageView 
           android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:background="@drawable/index_divider"/>
	    
     <LinearLayout 
        android:id="@+id/about"
        android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:gravity="center_vertical"
	    >
	    <TextView 
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:textColor="@color/category_color"
	   		 android:layout_marginLeft="20dp"
	   		 android:text="@string/about"/>
     </LinearLayout>
     
      <ImageView 
           android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:background="@drawable/index_divider"/>

</LinearLayout>