<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/store_bg"
    >
    
      <LinearLayout 
        android:id="@+id/top"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/top_bg"
	    android:gravity="center"
	    >
    	<ImageView 
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		  android:background="@drawable/logo"/>
     </LinearLayout>
     
      <RelativeLayout 
        android:id="@+id/backup_contacts"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/contacts_selector"
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="25dp"
	    android:layout_marginRight="25dp"
	    android:layout_gravity="center_horizontal"
	    >
    	 <ImageView 
    	   android:id="@+id/backup_logo"
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_centerVertical="true"
	       android:background="@drawable/backup"
	       android:layout_marginLeft="10dp"/>
    	  <ImageView 
    	   android:id="@+id/divider"
    	   android:layout_toRightOf="@id/backup_logo"
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:background="@drawable/contacts_divider"
	       android:layout_centerVertical="true"
	       android:layout_marginLeft="10dp"/>
	    <TextView 
	        android:id="@+id/backup"
	         android:layout_toRightOf="@id/divider"
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:layout_marginLeft="10dp"
	   		 android:layout_alignBottom="@id/divider"
	   		 android:textColor="@color/category_color"
	   		 android:textSize="17sp"
	   		 android:text="@string/backup_contacts"/>
	     <TextView 
	         android:layout_below="@id/backup"
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:layout_alignLeft="@id/backup"
	   		 android:layout_marginTop="5dp"
	   		 android:textColor="@color/category_color"
	   		 android:text="@string/backup_to_idata"/>
     </RelativeLayout>
     
     <RelativeLayout 
        android:id="@+id/restore_contacts"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/contacts_selector"
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="25dp"
	    android:layout_marginRight="25dp"
	    android:layout_gravity="center_horizontal"
	    >
    	 <ImageView 
    	   android:id="@+id/backup_logo"
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_centerVertical="true"
	       android:background="@drawable/restore"
	       android:layout_marginLeft="10dp"/>
    	  <ImageView 
    	   android:id="@+id/divider"
    	   android:layout_toRightOf="@id/backup_logo"
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:background="@drawable/contacts_divider"
	       android:layout_centerVertical="true"
	       android:layout_marginLeft="10dp"/>
	    <TextView 
	        android:id="@+id/backup"
	         android:layout_toRightOf="@id/divider"
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:layout_marginLeft="10dp"
	   		 android:layout_alignBottom="@id/divider"
	   		 android:textColor="@color/category_color"
	   		 android:textSize="17sp"
	   		 android:text="@string/restore_contacts"/>
	     <TextView 
	         android:layout_below="@id/backup"
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:layout_alignLeft="@id/backup"
	   		 android:layout_marginTop="5dp"
	   		 android:textColor="@color/category_color"
	   		 android:text="@string/restore_to_idata"/>
     </RelativeLayout>
     
      <RelativeLayout 
        android:id="@+id/Local_contacts"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	     android:layout_marginLeft="25dp"
	    android:layout_marginRight="25dp"
	    android:layout_marginTop="30dp"
	    >
	       <TextView 
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:textColor="@color/category_color"
	   		 android:text="@string/local_contacts"/>
	       <TextView 
	         android:id="@+id/local"
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:textColor="@color/category_color"
	   		 android:layout_alignParentRight="true"
	   		 android:text="--"/>
	   </RelativeLayout>
	   
  <!--      <RelativeLayout 
        android:id="@+id/add_contacts"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	     android:layout_marginLeft="25dp"
	    android:layout_marginRight="25dp"
	    android:layout_marginTop="10dp"
	    >
	       <TextView 
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:textColor="@color/category_color"
	   		 android:text="新增联系人："/>
	       <TextView 
	         android:id="@+id/add"
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:textColor="@color/category_color"
	   		 android:layout_alignParentRight="true"
	   		 android:text=""/>
	   </RelativeLayout> -->
	   
        <RelativeLayout 
	        android:id="@+id/add_contacts"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		     android:layout_marginLeft="25dp"
		    android:layout_marginRight="25dp"
		    android:layout_marginTop="10dp"
		    >
	       <TextView 
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:textColor="@color/category_color"
	   		 android:text="@string/last_time"/>
	       <TextView 
	         android:id="@+id/last_time"
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:textColor="@color/category_color"
	   		 android:layout_alignParentRight="true"
	   		 android:text="--"/>
	   </RelativeLayout>

</LinearLayout>