<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
      		xmlns:android="http://schemas.android.com/apk/res/android"
         	android:layout_width="fill_parent"    
	        android:layout_height="48.5dp" 
	        android:background="@drawable/bottom_bg"
	        android:weightSum="3"
	        >
	       <LinearLayout 
	           android:id="@+id/copy"
	         	android:layout_width="0dp"  
	         	android:layout_height="fill_parent"  
	         	android:orientation="vertical"
	         	android:layout_weight="1"
	         	android:gravity="center"
	         	android:background="@drawable/tab_selector"
		        >
	           <ImageView 
			            android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:scaleType="fitXY"
				    	android:src="@drawable/copy_bottom"
				    	/>
	           <TextView 
	                	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/copy"
				    	android:textColor="@color/category_color"
				    	android:textSize="12sp"/>
           </LinearLayout>
           
         <LinearLayout 
             android:id="@+id/move"
         	android:layout_width="0dp"  
         	android:layout_height="fill_parent"  
         	android:orientation="vertical"
         	android:layout_weight="1"
         	android:gravity="center"
         	android:background="@drawable/tab_selector"
	        >
              <ImageView 
		            android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:scaleType="fitXY"
			    	android:src="@drawable/move_bottom"
			    	/>
              <TextView 
               	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/move"
		    	android:textColor="@color/category_color"
		    	android:textSize="12sp"/>
          </LinearLayout>
          
          <LinearLayout 
             android:id="@+id/del"
         	android:layout_width="0dp"  
         	android:layout_height="fill_parent"  
         	android:orientation="vertical"
         	android:layout_weight="1"
         	android:gravity="center"
         	android:background="@drawable/tab_selector"
	        >
              <ImageView 
		            android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:scaleType="fitXY"
			    	android:src="@drawable/delete_bottom"
			    	/>
              <TextView 
               	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/delete"
		    	android:textColor="@color/category_color"
		    	android:textSize="12sp"/>
          </LinearLayout>
</LinearLayout>